force-app/main/default/objects/Waitlist__c/Waitlist__c.object-meta.xml
<CustomObject>
    <description>This custom object is intended to capture applicants for either a Lottery Waitlist or a general waitlist by project, building or unit type</description>
    <label>Listing</label>
    <nameField>
        <displayFormat>HCR{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Listings</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>