force-app/main/default/objects/Waitlist__c/fields/Accessibility_Information__c.field-meta.xml
<CustomField>
    <fullName>Accessibility_Information__c</fullName>
    <description>Bulleted Accessibility list</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Accessibility Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>