force-app/main/default/objects/Waitlist__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account associated to Waitlist</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Waitlists</relationshipName>
    <type>Lookup</type>
</CustomField>