force-app/main/default/objects/Waitlist__c/fields/Actual_Lottery_Run_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Actual_Lottery_Run_DateTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Actual Lottery Run DateTime</label>
    <type>DateTime</type>
</CustomField>