force-app/main/default/objects/Waitlist__c/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rent Utility Inclusion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>