force-app/main/default/objects/Waitlist__c/fields/Additional_Information_Details__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Information Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>