force-app/main/default/objects/Waitlist__c/fields/All_Paper_Applications_are_Completed__c.field-meta.xml
<CustomField>
    <fullName>All_Paper_Applications_are_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Paper Applications are Completed?</label>
    <type>Checkbox</type>
</CustomField>