force-app/main/default/objects/Waitlist__c/fields/Amenities_Description__c.field-meta.xml
<CustomField>
    <fullName>Amenities_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Amenities Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>