force-app/main/default/objects/Waitlist__c/fields/Application_Due__c.field-meta.xml
<CustomField>
    <fullName>Application_Due__c</fullName>
    <description>When the application is due</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Application Due</label>
    <type>Date</type>
</CustomField>