force-app/main/default/objects/Waitlist__c/fields/Application_Fee_YN__c.field-meta.xml
<CustomField>
    <fullName>Application_Fee_YN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Application Fee YN</label>
    <type>Checkbox</type>
</CustomField>