force-app/main/default/objects/Waitlist__c/fields/Approved_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Approved_Rejected__c</fullName>
    <description>This field is used to stamp the status of approval process. Initially when the request is submitted from community/website this field will be marked as submitted, then the approval process marks it as approved/rejected as per user decision.</description>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft to Open</fullName>
            </value>
            <value>
                <fullName>Open to Close</fullName>
            </value>
            <value>
                <fullName>Close to Open</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
                <label>Submitted To HCR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>