force-app/main/default/objects/Waitlist__c/fields/Archived__c.field-meta.xml
<CustomField>
    <fullName>Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to capture if the waitlist is archived or not, we are not going to show the archived waitlist to the user once marked.</description>
    <label>Archived</label>
    <type>Checkbox</type>
</CustomField>