force-app/main/default/objects/Waitlist__c/fields/Asset_Manager__c.field-meta.xml
<CustomField>
    <fullName>Asset_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Waitlists</relationshipName>
    <type>Lookup</type>
</CustomField>