force-app/main/default/objects/Waitlist__c/fields/Associated_Units__c.field-meta.xml
<CustomField>
    <fullName>Associated_Units__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>When possible, associate Units to an open lottery or waitlist</description>
    <label>Associated Units</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Asset.RecordTypeId</field>
            <operation>equals</operation>
            <value>Unit</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipName>LotteryWaitlists</relationshipName>
    <type>Lookup</type>
</CustomField>