force-app/main/default/objects/Waitlist__c/fields/Average_Monthly_Rent__c.field-meta.xml
<CustomField>
    <fullName>Average_Monthly_Rent__c</fullName>
    <formula>Project__r.Average_Monthly_Rent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Monthly Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>