force-app/main/default/objects/Waitlist__c/fields/CanRunLottery__c.field-meta.xml
<CustomField>
    <fullName>CanRunLottery__c</fullName>
    <formula>ISPICKVAL(Status__c, &quot;Open&quot;) &amp;&amp; Lottery_Run_Date__c &lt;= TODAY() &amp;&amp; ISNULL( Actual_Lottery_Run_DateTime__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CanRunLottery</label>
    <type>Checkbox</type>
</CustomField>