force-app/main/default/objects/Waitlist__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City for Search on Housing Search (automation populated from Flow)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>