force-app/main/default/objects/Waitlist__c/fields/Credit_Check__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does this listing require a credit check?</description>
    <inlineHelpText>Does this listing require a credit check?</inlineHelpText>
    <label>Credit Check</label>
    <type>Checkbox</type>
</CustomField>