force-app/main/default/objects/Waitlist__c/fields/Criminal_Background_Check__c.field-meta.xml
<CustomField>
    <fullName>Criminal_Background_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does this listing require a criminal background check to be processed?</description>
    <inlineHelpText>Does this listing require a criminal background check to be processed?</inlineHelpText>
    <label>Criminal Background Check</label>
    <type>Checkbox</type>
</CustomField>