force-app/main/default/objects/Waitlist__c/fields/Date_Available__c.field-meta.xml
<CustomField>
    <fullName>Date_Available__c</fullName>
    <description>Availability date for the listing</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Availability date for the listing</inlineHelpText>
    <label>Date Available</label>
    <type>Date</type>
</CustomField>