force-app/main/default/objects/Waitlist__c/fields/Days_to_sent_Remind_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Days_to_sent_Remind_Notifications__c</fullName>
    <formula>TODAY() -  Last_Remind_Notification_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to sent Remind Notifications</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>