force-app/main/default/objects/Waitlist__c/fields/End_Date_Due__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Due__c</fullName>
    <formula>Waitlist_End_Date__c - today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>