force-app/main/default/objects/Waitlist__c/fields/Experience_Tile_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Experience_Tile_Image_URL__c</fullName>
    <formula>Project__r.Experience_Tile_Image_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Experience Tile Image URL</label>
    <type>Text</type>
</CustomField>