force-app/main/default/objects/Waitlist__c/fields/External_Application_URL__c.field-meta.xml
<CustomField>
    <fullName>External_Application_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>External Application URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>