force-app/main/default/objects/Waitlist__c/fields/Flyer_Download_URL__c.field-meta.xml
<CustomField>
    <fullName>Flyer_Download_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Flyer Download URL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>