force-app/main/default/objects/Waitlist__c/fields/Has_Health_Facilities__c.field-meta.xml
<CustomField>
    <fullName>Has_Health_Facilities__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Health Facilities</label>
    <type>Checkbox</type>
</CustomField>