force-app/main/default/objects/Waitlist__c/fields/Has_Parking__c.field-meta.xml
<CustomField>
    <fullName>Has_Parking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Parking</label>
    <type>Checkbox</type>
</CustomField>