force-app/main/default/objects/Waitlist__c/fields/Has_Public_Transportation__c.field-meta.xml
<CustomField>
    <fullName>Has_Public_Transportation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Public Transportation</label>
    <type>Checkbox</type>
</CustomField>