force-app/main/default/objects/Waitlist__c/fields/Has_Schools__c.field-meta.xml
<CustomField>
    <fullName>Has_Schools__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Schools</label>
    <type>Checkbox</type>
</CustomField>