force-app/main/default/objects/Waitlist__c/fields/HH_Max_Income__c.field-meta.xml
<CustomField>
    <fullName>HH_Max_Income__c</fullName>
    <label>HH Max Income</label>
    <summarizedField>Waitlist_Rules__c.HH_Max_Income__c</summarizedField>
    <summaryForeignKey>Waitlist_Rules__c.Waitlist__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>