force-app/main/default/objects/Waitlist__c/fields/HH_Min_Household_Size__c.field-meta.xml
<CustomField>
    <fullName>HH_Min_Household_Size__c</fullName>
    <label>HH Min Household Size</label>
    <summarizedField>Waitlist_Rules__c.HH_Min_Household_Size__c</summarizedField>
    <summaryForeignKey>Waitlist_Rules__c.Waitlist__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>