force-app/main/default/objects/Waitlist__c/fields/Housing_Provider_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Housing_Provider_Owner_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Housing Provider Owner Email</label>
    <type>Email</type>
</CustomField>