force-app/main/default/objects/Waitlist__c/fields/Income_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Income_Restrictions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Income Restrictions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>