force-app/main/default/objects/Waitlist__c/fields/Is_Accessible_Unit__c.field-meta.xml
<CustomField>
    <fullName>Is_Accessible_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Accessible Units Waitlist</label>
    <type>Checkbox</type>
</CustomField>