force-app/main/default/objects/Waitlist__c/fields/Is_Mitchell_Lama__c.field-meta.xml
<CustomField>
    <fullName>Is_Mitchell_Lama__c</fullName>
    <label>Is Mitchell Lama</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>