force-app/main/default/objects/Waitlist__c/fields/Last_Remind_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Remind_Notification_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Remind Notification Date</label>
    <type>Date</type>
</CustomField>