force-app/main/default/objects/Waitlist__c/fields/LastDocGenProcess__c.field-meta.xml
<CustomField>
    <fullName>LastDocGenProcess__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LastDocGenProcess</label>
    <length>18</length>
    <type>Text</type>
</CustomField>