force-app/main/default/objects/Waitlist__c/fields/Listing_Description__c.field-meta.xml
<CustomField>
    <fullName>Listing_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Listing Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>