force-app/main/default/objects/Waitlist__c/fields/Lookup_Field_For_OS_ML__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Field_For_OS_ML__c</fullName>
    <formula>Name &amp;&quot; | &quot;&amp; Text(Unit_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lookup Field For OS ML</label>
    <type>Text</type>
</CustomField>