force-app/main/default/objects/Waitlist__c/fields/Lottery_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Lottery_Instructions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lottery Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>