force-app/main/default/objects/Waitlist__c/fields/Lottery_Ready_To_Run__c.field-meta.xml
<CustomField>
    <fullName>Lottery_Ready_To_Run__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lottery Ready To Run</label>
    <type>Checkbox</type>
</CustomField>