force-app/main/default/objects/Waitlist__c/fields/Lottery_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Lottery_Run_Date__c</fullName>
    <description>Date Lottery is scheduled to run</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Lottery Run Date</label>
    <type>Date</type>
</CustomField>