force-app/main/default/objects/Waitlist__c/fields/Lottery_Run_Location__c.field-meta.xml
<CustomField>
    <fullName>Lottery_Run_Location__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lottery Run Location</label>
    <type>TextArea</type>
</CustomField>