force-app/main/default/objects/Waitlist__c/fields/Lottery_Run_Time__c.field-meta.xml
<CustomField>
    <fullName>Lottery_Run_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lottery Run Time</label>
    <type>DateTime</type>
</CustomField>