force-app/main/default/objects/Waitlist__c/fields/Mailing_Address_Details__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing Address Details</label>
    <type>TextArea</type>
</CustomField>