force-app/main/default/objects/Waitlist__c/fields/Main_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Main_Contact_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the email that the public and applicants can contact the Owner/Managing agent for a lottery or waitlist</inlineHelpText>
    <label>Main Contact Email</label>
    <type>Email</type>
</CustomField>