force-app/main/default/objects/Waitlist__c/fields/Main_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Main_Contact_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Main Contact Phone</label>
    <type>Phone</type>
</CustomField>