force-app/main/default/objects/Waitlist__c/fields/max_income__c.field-meta.xml
<CustomField>
    <fullName>max_income__c</fullName>
    <description>This field is the maximum of maximum income field of waitlist rules</description>
    <label>Max Income</label>
    <summarizedField>Waitlist_Rules__c.Max_Household_Income__c</summarizedField>
    <summaryForeignKey>Waitlist_Rules__c.Waitlist__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>