force-app/main/default/objects/Waitlist__c/fields/Maximum_Income__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Income__c</fullName>
    <label>Maximum Income</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>