force-app/main/default/objects/Waitlist__c/fields/min_income__c.field-meta.xml
<CustomField>
    <fullName>min_income__c</fullName>
    <description>This field is the minimum of minimum household income field of waitlist rules</description>
    <label>Min income</label>
    <summarizedField>Waitlist_Rules__c.Min_Household_Income__c</summarizedField>
    <summaryForeignKey>Waitlist_Rules__c.Waitlist__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>