force-app/main/default/objects/Waitlist__c/fields/Minimum_Income__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Income__c</fullName>
    <label>Minimum Income</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>