force-app/main/default/objects/Waitlist__c/fields/Minimum_Lease_Term__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Lease_Term__c</fullName>
    <label>Minimum Lease Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12 Months</fullName>
            </value>
            <value>
                <fullName>24 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>