force-app/main/default/objects/Waitlist__c/fields/Move_Applicant_to_New_Waitlist__c.field-meta.xml
<CustomField>
    <fullName>Move_Applicant_to_New_Waitlist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Waitlisted</label>
    <type>Checkbox</type>
</CustomField>