force-app/main/default/objects/Waitlist__c/fields/No_of_applications_to_process__c.field-meta.xml
<CustomField>
    <fullName>No_of_applications_to_process__c</fullName>
    <label>No. of applications to process</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>