force-app/main/default/objects/Waitlist__c/fields/Number_of_Units__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Units__c</fullName>
    <description>Number of Units Available for consideration</description>
    <inlineHelpText>Number of Units Available for consideration</inlineHelpText>
    <label>Number of Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>