force-app/main/default/objects/Waitlist__c/fields/Organization_URL__c.field-meta.xml
<CustomField>
    <fullName>Organization_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Organization URL</label>
    <type>Url</type>
</CustomField>