force-app/main/default/objects/Waitlist__c/fields/Owner_Managing_Agent_Comments__c.field-meta.xml
<CustomField>
    <fullName>Owner_Managing_Agent_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Owner Managing Agent Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>