force-app/main/default/objects/Waitlist__c/fields/Portal_Status__c.field-meta.xml
<CustomField>
    <fullName>Portal_Status__c</fullName>
    <formula>IF(
  ISPICKVAL(Status__c, &quot;Submitted for Approval&quot;),
  IF(
    Type__c = &quot;HCR Lottery&quot;,
    &quot;Lottery Submitted&quot;,
    IF(
      Type__c = &quot;HCR Waitlist&quot;,
      &quot;Waitlist Submitted&quot;,
      TEXT(Status__c)
    )
  ),
  TEXT(Status__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Portal Status</label>
    <type>Text</type>
</CustomField>