force-app/main/default/objects/Waitlist__c/fields/Preference_Waiver_Requested_Comment__c.field-meta.xml
<CustomField>
    <fullName>Preference_Waiver_Requested_Comment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Preference Waiver Requested Comment</label>
    <type>TextArea</type>
</CustomField>