force-app/main/default/objects/Waitlist__c/fields/Priority_Admission_For_Hearing_Vision__c.field-meta.xml
<CustomField>
    <fullName>Priority_Admission_For_Hearing_Vision__c</fullName>
    <label>Priority Admission For Hearing/Vision</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>