force-app/main/default/objects/Waitlist__c/fields/Priority_Admission_For_Veterans__c.field-meta.xml
<CustomField>
    <fullName>Priority_Admission_For_Veterans__c</fullName>
    <label>Priority Admission For Veterans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>