force-app/main/default/objects/Waitlist__c/fields/Priority_Admissions__c.field-meta.xml
<CustomField>
    <fullName>Priority_Admissions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Priority Admissions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>