force-app/main/default/objects/Waitlist__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Associated to a Project</description>
    <label>Project</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Project__c.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project__c</referenceTo>
    <relationshipName>Waitlists</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>