force-app/main/default/objects/Waitlist__c/fields/Project_Location__c.field-meta.xml
<CustomField>
    <fullName>Project_Location__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Project Location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>