force-app/main/default/objects/Waitlist__c/fields/Public_Transit_Access__c.field-meta.xml
<CustomField>
    <fullName>Public_Transit_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Public Transit Access</label>
    <type>Checkbox</type>
</CustomField>