force-app/main/default/objects/Waitlist__c/fields/Reason_for_Preference_Waiver__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Preference_Waiver__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason for Preference Waiver</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>