force-app/main/default/objects/Waitlist__c/fields/Requested_Accessibility_Unit_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Accessibility_Unit_Close_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Requested Accessibility Unit Close Date</label>
    <type>Date</type>
</CustomField>