force-app/main/default/objects/Waitlist__c/fields/Requested_End_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Requested_End_Date_Formula__c</fullName>
    <formula>IF( !ISNULL(Requested_End_Date__c),Requested_End_Date__c,Waitlist_End_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested End Date Formula</label>
    <type>Date</type>
</CustomField>