force-app/main/default/objects/Waitlist__c/fields/Requested_General_Waitlist_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_General_Waitlist_Close_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Requested General Waitlist Close Date</label>
    <type>Date</type>
</CustomField>