force-app/main/default/objects/Waitlist__c/fields/Requested_Start_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Requested_Start_Date_Formula__c</fullName>
    <formula>IF( NOT(ISNULL(Requested_Start_Date__c)),Requested_Start_Date__c,Waitlist_Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested Start Date Formula</label>
    <type>Date</type>
</CustomField>