force-app/main/default/objects/Waitlist__c/fields/Security_Deposit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Security_Deposit_Amount__c</fullName>
    <label>Security Deposit Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>