force-app/main/default/objects/Waitlist__c/fields/Security_Deposit_YN__c.field-meta.xml
<CustomField>
    <fullName>Security_Deposit_YN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Security Deposit YN</label>
    <type>Checkbox</type>
</CustomField>