force-app/main/default/objects/Waitlist__c/fields/Send_Approve_Custom_Notification__c.field-meta.xml
<CustomField>
    <fullName>Send_Approve_Custom_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will send the custom notification to Managing agent on Approval.</description>
    <label>Send Approve Custom Notification</label>
    <type>Checkbox</type>
</CustomField>