force-app/main/default/objects/Waitlist__c/fields/Send_Reject_Custom_Notification__c.field-meta.xml
<CustomField>
    <fullName>Send_Reject_Custom_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will send the custom notification to Managing Agent on reject.</description>
    <label>Send Reject Custom Notification</label>
    <type>Checkbox</type>
</CustomField>